--- a/app/assets/stylesheets/footer.sass
+++ b/app/assets/stylesheets/footer.sass
@@ -76,6 +76,13 @@
           background: image-url('footer_bg.png') no-repeat
           border-top: 5px ridge #3c80BF
 
+@media (max-device-width: 668px)
+  .aps-footer
+    .container
+      #footer-wrapper
+        #footer-inner
+          height: 130px
+
 @media (max-width: 320px)
   .aps-footer
     background-repeat: repeat
