--- a/app/assets/stylesheets/typography.sass
+++ b/app/assets/stylesheets/typography.sass
@@ -39,6 +39,7 @@
     clear: both
   .dl-horizontal
     font-family: "Solano Gothic MVB Medium"
+    font-size: 1em
     > dt
       color: #3C80BF
     > dd
@@ -115,3 +116,8 @@
         color: #fff
         a
           color: #fff
+
+@media (min-width: 768px)
+  .aps-main
+    .dl-horizontal
+      font-size: 2em
